--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
     <groupId>com.example</groupId>
     <artifactId>SimpleBlog</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+<!--    <packaging>war</packaging>-->
+    <packaging>jar</packaging>
     <name>SimpleBlog</name>
     <description>Demo project for Spring Boot</description>
     <properties>
