--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -5,20 +5,25 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql:///simpleblog?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql:///simpleblog?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+    #    allowMultiQueries 允许多查询
     username: root
     password: root
     type: com.alibaba.druid.pool.DruidDataSource
-  # jpa.hibernate.ddl  对比字段的映射如果不一样及更新。
-  #  show-sql 控制台输出sql语句  启用 SQL 语句的日志记录
 
+  #spring jpa.hibernate.ddl  对比字段的映射如果不一样及更新。生产环境下设置为none
+  #spring  show-sql 控制台输出sql语句  启用 SQL 语句的日志记录
   jpa:
     hibernate:
       ddl-auto: none
     show-sql: true
+#日志级别改为warn
 logging:
   level:
     root: warn
     com.zry: info
   file:
     name: log/blog-pro.log
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
