优化跳转，添加个人信息管理，评论区自动获取昵称头像

--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -1,6 +1,4 @@
 server:
-  servlet:
-    context-path: /Blog
   port: 80
 spring:
   datasource:
@@ -35,7 +33,7 @@ logging:
     root: info
     com.zry: info
   file:
-    name: log/blog-dev.log
+    name: log/blog-pro.log
 
 mybatis:
   configuration:
