添加发布评论接口

--- a/src/main/resources/globalVariable.properties
+++ b/src/main/resources/globalVariable.properties
@@ -2,3 +2,5 @@ cookie.user.key=userTicket
 #?? ??
 cookie.user.surviveTime=30
 page.path.login=/back/login.html
+
+comment.default.avatar=/images/avatar/avatar1.png
