--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -1,8 +1,60 @@
 server:
   port: 8080
-# 应用名称
+  error:
+    include-message: always
 spring:
-  application:
-    name: SimpleBlog
-  profiles:
-    active: pro
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql:///simpleblog?useUnicode=true&serverTimezone=GMT%2B8&characterEncoding=utf-8&useSSL=true&allowPublicKeyRetrieval=true
+    username: root
+    password: root
+    type: com.alibaba.druid.pool.DruidDataSource
+  jpa:
+    database: MYSQL
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
+    #配置是否打印sql
+    show-sql: false
+    open-in-view: true
+
+  redis:
+    port: 6379
+    host: 1.XXX.XXX.XXX
+    password: XXX
+    database: 0
+    jedis:
+      pool:
+        max-wait: 100000
+  #jackson
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    serialization:
+      indent_output: true
+    time-zone: GMT+8
+  mail:
+    username:
+    password:
+    host: smtp.qq.com
+    properties:
+      mail:
+        smtp:
+          ssl:
+            enable: true
+logging:
+  level:
+    root: warn
+    com.zry: warn
+  file:
+    name: log/blog-pro.log
+
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
+    #下面这些内容是为了让MyBatis映射
+    #指定Mybatis的Mapper文件
+  mapper-locations: classpath:mappers/*xml
+  #指定Mybatis的实体目录
+  type-aliases-package: com.zry.simpleBlog.entity
+
