--- a/src/main/resources/globalVariable.properties
+++ b/src/main/resources/globalVariable.properties
@@ -4,3 +4,6 @@ cookie.user.surviveTime=30
 page.path.login=/back/login.html
 
 comment.default.avatar=/images/avatar/avatar1.png
+
+emailService.email=1447051936@qq.com
+emailService.password=uicoqceclcaphahc
