--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,7 +18,7 @@ spring:
     open-in-view: true
   redis:
     port: 6379
-    host: 1.117.229.251
+    host: 1.XXX.XXX.XXX
     password: 123
     database: 0
     jedis:
