增加功能:修改密码接口

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -31,7 +31,7 @@ spring:
       indent_output: true
     time-zone: GMT+8
   mail:
-    username:
+    username: 1447051936@qq.com
     password:
     host: smtp.qq.com
     properties:
