--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   application:
     name: SimpleBlog
   profiles:
-    active: pro
+    active: dev
   messages:
     basename: i18n/messages
 #    静态资源缓存
